# prject_agentieImobiliara

./: README.md
project/: Dockerfile  oferta.json  pyproject.toml  vanzari.txt
project/docs/: cerinte proiect.txt
project/src/: __init__.py  config.py  main.py  mainApi.py
project/src/API/endpoints/: __init__.py  apartments.py  complexe.py  extra_options.py
project/src/UI/: utility.py
project/src/model/: modelApartament.py  modelClient.py  modelComplex.py  modelContract.py  modelExtraOptiune.py  modelInchiriere.py  modelInregistrareCcont.py  modelVanzare.py
project/src/module/oferta/: _init_.py  apartamente.py  clienti.py  complex.py  contracte.py  dataBaseAcces.py  extra_optiuni.py  tipApartament.py
project/src/module/serializare/: serializarea.py
project/src/module/servicii/: Bot.py  _init_.py  contabilitatea.py  inchirieri.py  thread.py  vanzari.py
project/src/storage/: base.py
project/tests/: test_happy_path.py
