[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.2"
flask = "^2.3.2"
sqlalchemy = "^2.0.12"
pydantic = "^1.10.7"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
mysqlclient = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
